@@ -2,7 +2,7 @@
 #  Makefile for GXemul src/components
 #
 
-all: do_dummy do_machines do_busses do_cpu do_memory
+all: do_special do_machines do_busses do_cpu do_memory
 
 do_busses:
 	cd busses; $(MAKE)
@@ -10,8 +10,8 @@ do_busses:
 do_cpu:
 	cd cpu; $(MAKE)
 
-do_dummy:
-	cd dummy; $(MAKE)
+do_special:
+	cd special; $(MAKE)
 
 do_machines:
 	cd machines; $(MAKE)
@@ -22,14 +22,14 @@ do_memory:
 clean:
 	cd busses; $(MAKE) clean
 	cd cpu; $(MAKE) clean
-	cd dummy; $(MAKE) clean
+	cd special; $(MAKE) clean
 	cd machines; $(MAKE) clean
 	cd memory; $(MAKE) clean
 
 clean_all: clean
 	cd busses; $(MAKE) clean_all
 	cd cpu; $(MAKE) clean_all
-	cd dummy; $(MAKE) clean_all
+	cd special; $(MAKE) clean_all
 	cd machines; $(MAKE) clean_all
 	cd memory; $(MAKE) clean_all
 	rm -f Makefile
